--- a/fashion/index.html
+++ b/fashion/index.html
@@ -8,70 +8,55 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Cairo:wght@600&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body data-barba="wrapper">
     <header class="nav-header">
-      <h1><a href="./index.html" id="logo">days.</a></h1>
+      <h1><a href="../index.html" id="logo">days.</a></h1>
       <div class="burger">
         <div class="line1"></div>
         <div class="line2"></div>
       </div>
     </header>
-    <main data-barba="container" data-barba-namespace="home">
-      <section class="mountain slide">
-        <div class="hero-img">
-          <img src="img/forest.png" alt="Image of forest" />
-          <div class="reveal-img"></div>
-        </div>
-        <div class="hero-desc">
-          <div class="title">
-            <h2>Freedom at your <span class="mountain-span">fingertips.</span></h2>
-            <div class="title-swipe t-swipe1"></div>
-          </div>
+    <main data-barba="container" data-barba-namespace="fashion">
+      <section class="fashion1 detail-slide">
+        <div class="fashion-text">
+          <h1>Kylie Jenner</h1>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse maiores fugiat cupiditate ipsam rerum
-            inventore eum id fugit, quam accusamus eius, ad mollitia numquam sit iusto culpa est corrupti repellendus.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id laboriosam libero eum nihil sunt quam
+            voluptatum iste veritatis quisquam repellendus?
           </p>
-          <button class="explore mountain-exp">Explore</button>
-          <div class="reveal-text"></div>
         </div>
+        <div class="fashion-img">
+          <img src="../img/fashion-img1.png" alt="Fashion" />
+        </div>
+        <div class="fashion-nr"><span>01</span></div>
       </section>
-      <section class="hike slide">
-        <div class="hero-img">
-          <img src="img/hike.png" alt="Image of a hike" />
-          <div class="reveal-img"></div>
-        </div>
-        <div class="hero-desc">
-          <div class="title">
-            <h2>Freedom at your <span class="hike-span">fingertips.</span></h2>
-            <div class="title-swipe t-swipe2"></div>
-          </div>
+      <section class="fashion2 detail-slide">
+        <div class="fashion-text">
+          <h1>Kylie Jenner</h1>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse maiores fugiat cupiditate ipsam rerum
-            inventore eum id fugit, quam accusamus eius, ad mollitia numquam sit iusto culpa est corrupti repellendus.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id laboriosam libero eum nihil sunt quam
+            voluptatum iste veritatis quisquam repellendus?
           </p>
-          <button class="explore hike-exp">Explore</button>
-          <div class="reveal-text"></div>
         </div>
+        <div class="fashion-img">
+          <img src="../img/fashion-img2.png" alt="Fashion" />
+        </div>
+        <div class="fashion-nr"><span>02</span></div>
       </section>
-      <section class="fashion slide">
-        <div class="hero-img">
-          <img src="img/fashion.png" alt="Fashion" />
-          <div class="reveal-img"></div>
-        </div>
-        <div class="hero-desc">
-          <div class="title">
-            <h2>Freedom at your <span class="fashion-span">fingertips.</span></h2>
-            <div class="title-swipe t-swipe3"></div>
-          </div>
+      <section class="fashion3 detail-slide">
+        <div class="fashion-text">
+          <h1>Kylie Jenner</h1>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse maiores fugiat cupiditate ipsam rerum
-            inventore eum id fugit, quam accusamus eius, ad mollitia numquam sit iusto culpa est corrupti repellendus.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id laboriosam libero eum nihil sunt quam
+            voluptatum iste veritatis quisquam repellendus?
           </p>
-          <a href="./fashion/index.html" class="explore fashion-exp">Explore</a>
-          <div class="reveal-text"></div>
         </div>
+        <div class="fashion-img">
+          <img src="../img/fashion-img3.png" alt="Fashion" />
+        </div>
+        <div class="fashion-nr"><span>03</span></div>
       </section>
     </main>
     <nav class="nav-bar">
@@ -112,6 +97,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
-    <script src="app.js"></script>
+    <script src="../app.js"></script>
   </body>
 </html>
